src/tree-sitter-rgbds/grammar.js
    source_file: $ => seq(repeat($.line), optional($.final_line)),

    // ─── Line structure ───────────────────────────────────────

    _nonempty_line_content: $ => choice(
      seq($.label_definition, optional($.statement), repeat(seq('::', $.statement)), optional($.comment)),
      seq($.statement, repeat(seq('::', $.statement)), optional($.comment)),
      $.comment,
    ),

    line: $ => choice(
      seq($._nonempty_line_content, '\n'),
      '\n',
    ),

    statement: $ => choice($.instruction, $.directive, $.macro_invocation),

    line_continuation: _ => token(seq('\\', /[ \t]*/, optional(/;[^\r\n]*/), /\r?\n/)),

    // ─── Comments ─────────────────────────────────────────────

    comment: _ => /;[^\r\n]*/,

    label_definition: $ => choice($.global_label, $.local_label, $.anonymous_label),

    global_label: $ => seq(
      field('name', choice($.identifier, $.scoped_identifier, $.macro_label, $.interpolation)),
      choice('::', ':'),
    ),

    instruction: $ => seq(field('mnemonic', $.mnemonic), optional($.operand_list)),

    mnemonic: _ => token(choice(...INSTRUCTIONS.map(i => ci(i)))),

    operand_list: $ => seq($.operand, repeat(seq(',', $.operand))),

    operand: $ => choice(
      $.sp_offset, $.sp_register, $.negated_condition,
      $.register, $.condition, $.memory_operand, $.expression,
    ),

    sp_offset: $ => prec(2, seq($.sp_register, choice('+', '-'), $.expression)),
    sp_register: _ => token(ci('sp')),
    register: _ => token(choice(...REGISTERS.map(r => ci(r)))),
    condition: _ => token(choice(...CONDITIONS.map(c => ci(c)))),
    negated_condition: $ => seq('!', $.condition),

    // SM83 legal: [hl], [bc], [de], [hl+], [hl-], [c] (high mem), [n16].
    // Uses generic register token — semantic validation deferred to LSP
    // (dedicated tokens cause lexer conflicts with the register token).
    directive: $ => choice(
      $._core_directive, $._block_directive, $._stack_directive, $._rs_directive,
    ),

    _core_directive: $ => choice(
      $.section_directive, $.load_directive, $.data_directive, $.constant_directive,
      $.include_directive, $.incbin_directive, $.export_directive, $.purge_directive,
      $.charmap_directive, $.newcharmap_directive, $.setcharmap_directive,
      $.assert_directive, $.print_directive, $.warn_directive, $.fail_directive,
      $.opt_directive,
    ),

    _block_directive: $ => choice(
      $.macro_start, $.endm_directive,
      $.if_directive, $.elif_directive, $.else_directive, $.endc_directive,
      $.rept_directive, $.for_directive, $.endr_directive, $.break_directive,
      $.shift_directive, $.endsection_directive,
      $.union_directive, $.nextu_directive, $.endu_directive, $.endl_directive,
    ),

    _stack_directive: $ => choice(
      $.pushs_directive, $.pops_directive,
      $.pusho_directive, $.popo_directive,
      $.pushc_directive, $.popc_directive,
    ),

    _rs_directive: $ => choice(
      $.rsreset_directive, $.rsset_directive, $.rb_directive, $.rw_directive,
    ),

    // ─── Section / Load (shared body) ─────────────────────────

    _section_body: $ => seq(
      optional(choice(ci_kw('UNION'), ci_kw('FRAGMENT'))),
      $.string, ',', $.section_type,
      optional(seq('[', $.expression, ']')),
      repeat(seq(',', $.section_option)),
    ),

    section_directive: $ => seq(ci_kw('SECTION'), $._section_body),
    load_directive: $ => seq(ci_kw('LOAD'), $._section_body),

    section_type: _ => token(choice(
      ci('ROM0'), ci('ROMX'), ci('VRAM'), ci('SRAM'),
      ci('WRAM0'), ci('WRAMX'), ci('OAM'), ci('HRAM'),
    )),

    data_directive: $ => seq(
      field('size', choice(ci_kw('DB'), ci_kw('DW'), ci_kw('DL'), ci_kw('DS'))),
      optional($.expression_list),
    ),

    // ─── Constants ────────────────────────────────────────────

    _def_name: $ => choice($.identifier, $.raw_identifier, $.interpolation, $.macro_label),

    _def_body: $ => choice(
      seq(ci_kw('EQU'), $.expression),
      seq(ci_kw('EQUS'), $.expression),
      seq($._assignment_op, $.expression),
      seq($._reserve_op, optional($.expression)),
    ),

    _redef_body: $ => choice(
      seq(ci_kw('EQU'), $.expression),
      seq(ci_kw('EQUS'), $.expression),
      seq($._assignment_op, $.expression),
    ),

    _legacy_def_body: $ => choice(
      seq(ci_kw('EQU'), $.expression),
      seq(ci_kw('EQUS'), $.expression),
      seq(choice('=', ci_kw('SET')), $.expression),
      seq($._reserve_op, optional($.expression)),
    ),

    constant_directive: $ => choice(
      seq(ci_kw('DEF'), field('name', $._def_name), $._def_body),
      seq(ci_kw('REDEF'), field('name', $._def_name), $._redef_body),
      seq(field('name', $.identifier), $._legacy_def_body),
    ),

    // ─── Include / Incbin ─────────────────────────────────────

    include_directive: $ => seq(ci_kw('INCLUDE'), $.string),

    macro_start: $ => seq(ci_kw_q('MACRO'), field('name', $.identifier)),
    endm_directive: _ => ci_kw('ENDM'),

    // Lowest precedence fallback. Inherently broad but matches RGBDS behavior
    // where any identifier can be a user-defined macro.
    if_directive: $ => seq(ci_kw('IF'), $.expression),
    endc_directive: _ => ci_kw('ENDC'),

    // ─── Loops ────────────────────────────────────────────────

    endl_directive: _ => ci_kw('ENDL'),

    // ─── RS counter ───────────────────────────────────────────
    // Standalone rl cannot be included: 'rl' is both an SM83 mnemonic and an RS
    // directive, and the mnemonic token always wins at the lexer level. The named
    // form 'DEF name RL expr' works via constant_directive's _reserve_op.

    expression_list: $ => seq($.expression, repeat(seq(',', $.expression)), optional(',')),

    expression: $ => choice(
      $.binary_expression, $.unary_expression, $.parenthesized_expression,
      $.function_call, $.interpolation, $.equs_expansion,
      $.number, $.string, $.char_literal, $.gfx_literal,
      $.symbol_reference, $.macro_arg,
    ),

    // BEST-EFFORT HEURISTIC for EQUS text expansion.
    // EQUS macros expand as raw text before parsing, creating token sequences
    // the grammar cannot predict. The LSP should not rely on the structure of
    // equs_expansion nodes — they are parse-recovery, not semantic.
    binary_expression: $ => {
      // Left-associative operators (standard)
      /** @type {[string, number][]} */
      const leftOps = [
        ['||', 1],
        ['&&', 2],
        ['===', 3], ['!==', 3], ['==', 3], ['!=', 3], ['<', 3], ['>', 3], ['<=', 3], ['>=', 3],
        ['++', 4], ['+', 4], ['-', 4],
        ['|', 5],
        ['^', 6],
        ['&', 7],
        ['<<', 8], ['>>', 8], ['>>>', 8],
        ['*', 9], ['/', 9], ['%', 9],
      ];
      // Right-associative operators
      /** @type {[string, number][]} */
      const rightOps = [
        ['**', 10],
      ];
      return choice(
        ...leftOps.map(([op, p]) =>
          prec.left(p, seq(field('left', $.expression), op, field('right', $.expression)))
        ),
        ...rightOps.map(([op, p]) =>
          prec.right(p, seq(field('left', $.expression), op, field('right', $.expression)))
        ),
      );
    },

    function_call: $ => seq(field('function', $.identifier), '(', optional($.expression_list), ')'),

    _named_ref: $ => choice(
      $.identifier, $.scoped_identifier, $.local_identifier,
      $.macro_label, $.equs_string_ref, $.raw_identifier,
    ),

    symbol_reference: $ => choice($._named_ref, '@', /:[+-]+/),

    // # prefix: EQUS string expansion (#identifier), raw identifier (#keyword),
    // or project-convention hex color (#F8F8A8, #00FF00) — all handled as
    // string-like tokens, never as numbers.
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_#@]*((\{[^}\r\n]*\}|\\[1-9@])[a-zA-Z0-9_#@]*)*(\\@)?/,

    // RGBDS spec: "Label names cannot contain more than one period."
    scoped_identifier: _ => /[a-zA-Z_][a-zA-Z0-9_#@]*(\{[^}\r\n]*\}[a-zA-Z0-9_#@]*)*\.[a-zA-Z_][a-zA-Z0-9_#@]*(\{[^}\r\n]*\}[a-zA-Z0-9_#@]*)*(\\@)?/,

    local_identifier: _ => /\.[a-zA-Z_][a-zA-Z0-9_]*((\{[^}\r\n]*\}|\\[1-9@])[a-zA-Z0-9_]*)*(\\@)?/,

    number: _ => choice(
      /\$[0-9a-fA-F_]+/, /0[xX][0-9a-fA-F_]+/,
      /%[01_]+/, /%[.a-zA-Z0-9_]+/, /0[bB][01_]+/,
      /&[0-7_]+/, /0[oO][0-7_]+/,
      /[0-9]+\.[0-9]+[qQ][0-9]+/, /[0-9]+\.[0-9]+/, /[0-9][0-9_]*/,
    ),

    gfx_literal: _ => /`[^\s,;\r\n]+/,

    string: _ => choice(
      // Raw triple-quoted (no escapes, no interpolation)
      token(seq('#"""', /([^"]|"[^"]|""[^"])*/, '"""')),
      // Normal triple-quoted
      token(seq('"""', /([^"]|"[^"]|""[^"])*/, '"""')),
      // Raw single-quoted (no escapes, no interpolation)
      seq('#"', repeat(/[^"\r\n]/), '"'),
      // Normal single-quoted with escapes and interpolation
      seq('"', repeat(choice(/[^"\\\r\n{]/, /\\./, /\{[^}\r\n]*\}/)), '"'),
    ),
  },
});

/** @param {string} kw @returns {RegExp} */
function ci(kw) {
  return new RegExp(kw.split('').map(c =>
    /[a-zA-Z]/.test(c) ? `[${c.toLowerCase()}${c.toUpperCase()}]` : c
  ).join(''));
}

/** @param {string} kw @returns {RuleOrLiteral} */
function ci_kw(kw) {
  return token(prec(1, ci(kw)));
}

/** keyword with optional ? suffix (MACRO?/REPT?/FOR?) @param {string} kw @returns {RuleOrLiteral} */
function ci_kw_q(kw) {
  return choice(token(prec(1, seq(ci(kw), '?'))), ci_kw(kw));
}
